# tuun

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  app.js  build-wasm.sh  check-web-examples.sh  context.tun  context.tuun  dtmf.tuun  fm-variations.tuunp  index.html  maths.py  sliders.tuunp  style.css  synth.tuun  synth.tuunp  tuun-intro.md  tuun-langs.md  tuun-processor.js  tuun-synth.js
.cargo/: config.toml
.claude/: settings.json
benches/: tracker_benches.rs
docs/: Gemfile  README.md  _config.yml  architecture.md  dynamic.md  filter.md  index.md  instruments.md  language-spec.md  overview.md  sine.base.md  sine.md  synthesis.md  tuun-langs.md
docs/_includes/: head-custom.html
docs/tuun/: index.html  tuun-processor.js  tuun-synth.js
docs/tuun/pkg/: package.json  tuun.d.ts  tuun.js  tuun_bg.wasm  tuun_bg.wasm.d.ts
lib/: sliders.tuun  std.tuun  synth.tuun
lib/v0/: env_minmax.tuun  pm_synth.tuun  sliders.tuun  std.tuun  synth.tuun
pkg/: tuun.d.ts  tuun.js  tuun_bg.wasm  tuun_bg.wasm.d.ts
src/: README.md  builtins.rs  main.rs  metric.rs  parser.rs  renderer.rs  sequence.rs  tracker.rs
src/lib/: actions.rs  builtins.rs  diagnostics.rs  effects.rs  eval.rs  evaluator.rs  expr.rs  generator.rs  ids.rs  keys.rs  launchkey.rs  loader.rs  metric.rs  midi_input.rs  mod.rs  modules.rs  optimizer.rs  parser.rs  play_helper.rs  player.rs  programs.rs  renderer.rs  sdl2_input.rs  slider.rs  tracker.rs  wasm.rs  waveform.rs
src/misc/: midi_test.rs  sweep.rs  web_checker.rs
web/: README.md  app.js  index.html  style.css  tuun-processor.js  tuun-synth.js  tuun-text-codec.js
web/pkg/: tuun.d.ts  tuun.js  tuun_bg.wasm  tuun_bg.wasm.d.ts
