[package]
name = "tuun"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tuun"
bench = false

[lib]
path = "src/lib/mod.rs"
bench = false

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
fastrand = "2.3.0"
hound = "3.5.1"
mock_instant = "0.6.0"
nom = "8.0"
nom_locate = "5.0.0"
realfft = "3.5.0"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["ttf"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tracker_benches"
harness = false